# CubeSim

./: .gitignore  CMakeLists.txt
prompt/: _.md  animation
src/: main.cpp
src/Axis/: axis.h
src/Cube/: cube.cpp  cube.h  cubePiece.cpp  cubePiece.h  cubeState.cpp  cubeState.h  cubelet.h
src/Cube/Move/: move.h
src/Cube/Rotation/: rotation.h
src/Cube/core/: cubePiece.cpp  cubePiece.h  cubeState.cpp  cubeState.h
src/Cube/face/: face.cpp  face.h
src/Cube/model/: cube.cpp  cube.h
src/Cube/transform/: cubelet.h
src/color/: color.cpp  color.h
src/renderer/: cube.vert  renderer.cpp  renderer.h
